Final Project Submission

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ h1{color:grey;}
         color:black;
         width:300px;
         padding:20px;
-        border-radius:
+        border-radius:25px;
         }
 body{align:center;}
 
